pad: check query caps answered and caps not NULL

https://bugzilla.gnome.org/show_bug.cgi?id=768450